[skip ci] updated to upgrade guides

--- a/docs/api-reference/introduction.mdx
+++ b/docs/api-reference/introduction.mdx
@@ -1,8 +1,8 @@
 Spree comes with a fully-featured API that allows it to operate in a fully headless mode. This means that you can use Spree as a backend and build your custom storefront, mobile app, or any other application that needs to interact with an e-commerce platform.
 
-## APIs
+## API v2
 
-Currently Spree includes 2 APIs:
+Currently Spree includes 2 modern REST APIs:
 
 <CardGroup cols={2}>
   <Card title="Storefront API" href="storefront">
@@ -13,6 +13,6 @@ Currently Spree includes 2 APIs:
   </Card>
 </CardGroup>
 
-### Legacy REST API v1
+## Legacy REST API v1
 
 Legacy REST API v1 was extracted to `spree_api_v1` gem. It is not recommended to use it in new projects, but it's still available for existing ones.
